kubernetes/study/nginx-demo/2-service-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-nginx-app
  namespace: default
  labels:
    app: nginx-app
spec:
  containers:
    - name: nginx-app
      image: nginx:1.14.2-alpine
      resources:
        limits:
          cpu: 200m
          memory: 500Mi
        requests:
          cpu: 200m
          memory: 500Mi
      ports:
        - containerPort: 80
          # must be no more than 15 characters
          name: pod-port
  restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    # 選擇上方Pod的label
    app: nginx-app
  type: NodePort    
  ports:
  - name: service-port
    protocol: TCP
    # 可以想像成docker -p port:targetPort
    # 將Pod的targetPort mapping到service中的cluster port
    port: 8000    
    # 對應到為pod上的container port，可以用containerPort或name來完成
    targetPort: pod-port
    # 可以使用vm上的port進行存取
    nodePort: 30060

# 連線存取
# 1. VM內部透過ClusterIP進行存取
# clusterIP=$(kubectl get svc my-nginx-service -o jsonpath='{.spec.clusterIP}')
# curl $clusterIP:8000
# 2. 外部VM透過NodePort進行存取
# curl 192.168.100.101:30060 
# 3. 外部VM透過kubectl port-forward進行存取
# kubectl port-forward service/my-nginx-service --address 0.0.0.0 8000:8000
