kubernetes/study/nginx-demo/5-ingress-service-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-nginx-deploy
  namespace: default
  labels:
    app: nginx-deploy
spec:
  selector:
    matchLabels:
      app: nginx-deploy
  replicas: 3
  template:
    metadata:
      labels:
        app: nginx-deploy
    spec:
      containers:
        - name: my-nginx-app
          image: nginx:1.14.2-alpine
          resources:
            requests:
              cpu: 200m
              memory: 500Mi
            limits:
              cpu: 200m
              memory: 500Mi
          ports:
            - containerPort: 80
              name: deploy-port
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:  
  # name、namespace名稱必須設定為ingress-nginx，否則無法正確運作
  name: ingress-nginx
  namespace: ingress-nginx
  labels:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx  
spec:
  selector:
    app.kubernetes.io/name: ingress-nginx
    app.kubernetes.io/part-of: ingress-nginx
  type: NodePort    
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
  - name: https
    protocol: TCP
    port: 443
    targetPort: 443
---
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-service
spec:
  selector:
    # 選擇上方Deploy的label
    app: nginx-deploy
  type: ClusterIP    
  ports:
  - name: service-port
    protocol: TCP
    port: 8000
    targetPort: deploy-port     
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-http
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /  
spec:
  rules:
  # curl 192.168.100.101.nip.io/v1
  - host: 192.168.100.101.nip.io
    http:
      paths:       
      - path: /v1
        pathType: Prefix
        backend:
          service:
            # 對應Service的my-nginx-service
            name: my-nginx-service
            port:
              # 對應到my-nginx-service中的8000 port
              number: 8000                            
  # curl test.hello.com/v2 
  # 需要設定hosts內的domain進行對應，否則不會正常運作。設定windows/linux的hosts參數   
  # 192.168.100.101 test.hello.com
  - host: test.hello.com
    http:
      paths:
      - path: /v2
        pathType: Prefix
        backend:
          service:
            name: my-nginx-service
            port:
              number: 8000
